--- a/cmd/web/admin/web/tarantula.admin.css
+++ b/cmd/web/admin/web/tarantula.admin.css
@@ -1,2 +1,14 @@
-.tx-modal{display: none;position: fixed; z-index: 10;padding-top: 0px;left: 0;top: 0;width: 100%; height: 100%;background-color: rgb(0,0,0); background-color:rgba(0,0,0,0.4)}
-.tx-modal-content {background-color: #fefefe;margin: 0px;padding: 0px;border: none;position: relative; width:  100%; height: 100%;overflow: auto;}
+body{
+    font-family: Roboto,sans-serif;
+}
+.tx-roboto {
+    font-family: Roboto,sans-serif;
+}
+
+.tx-oswald {
+    font-family: Oswald,sans-serif;
+}
+
+.tx-sofia {
+  font-family: Sofia, sans-serif;
+}
