--- a/cmd/web/admin/web/tarantula.admin.css
+++ b/cmd/web/admin/web/tarantula.admin.css
@@ -12,3 +12,11 @@ body{
 .tx-sofia {
   font-family: Sofia, sans-serif;
 }
+.tx-content-36{height: 36px; width: 100%;}
+.tx-content-120{height: 120px; width: 100%;}
+.tx-white-icon-32{font-size: 32px; color: white;}
+.tx-orange-icon-32{font-size: 32px; color: orange;}
+
+.tx-text-32{font-family: "Oswald";font-size: 32px;}
+
+.tx-modal{display: none;position: fixed; z-index: 10;padding-top: 0px;left: 0;top: 0;width: 100%; height: 100%;background-color: rgb(0,0,0); background-color:rgba(0,0,0,0.4)}
