repackage gc code

--- a/cmd/web/admin/web/tarantula.admin.css
+++ b/cmd/web/admin/web/tarantula.admin.css
@@ -1,6 +1,6 @@
 body{
     font-family: Roboto,sans-serif;
-    background-image: url('como-cuidar-una-tarantula.jpg');
+    background-image: url('img_snowtops.jpg');
 }
 input[type="file"] {display: none;}
 
