--- a/cmd/web/admin/site/tarantula.admin.css
+++ b/cmd/web/admin/site/tarantula.admin.css
@@ -1,4 +1,18 @@
-.tx-oswald {
-  font-family: Oswald, serif;
-}
-.tx-white-icon-24{font-size: 24px; color: white;}
+.tx-oswald{font-family: Oswald, serif;}
+.tx-orange-icon-48{font-size: 48px; color: orange;}
+.tx-content-120{height: 120px; width: 100%;}
+.tx-margin-left-4{margin-left: 4px;}.tx-margin-right-4{margin-right: 4px;}.tx-margin-top-4{margin-top: 4px;}.tx-margin-bottom-4{margin-bottom: 4px;}
+.tx-margin-left-8{margin-left: 8px;}.tx-margin-right-8{margin-right: 8px;}.tx-margin-top-8{margin-top: 8px;}.tx-margin-bottom-8{margin-bottom: 8px;}
+.tx-margin-left-12{margin-left: 12px;}.tx-margin-right-12{margin-right: 12px;}.tx-margin-top-12{margin-top: 12px;}.tx-margin-bottom-12{margin-bottom: 12px;}
+.tx-margin-left-16{margin-left: 16px;}.tx-margin-right-16{margin-right: 16px;}.tx-margin-top-16{margin-top: 16px;}.tx-margin-bottom-16{margin-bottom: 16px;}
+.tx-margin-left-20{margin-left: 20px;}.tx-margin-right-20{margin-right: 20px;}.tx-margin-top-20{margin-top: 20px;}.tx-margin-bottom-20{margin-bottom: 20px;}
+.tx-margin-left-24{margin-left: 24px;}.tx-margin-right-24{margin-right: 24px;}.tx-margin-top-24{margin-top: 24px;}.tx-margin-bottom-24{margin-bottom: 24px;}
+.tx-margin-left-32{margin-left: 32px;}.tx-margin-right-32{margin-right: 32px;}.tx-margin-top-32{margin-top: 32px;}.tx-margin-bottom-32{margin-bottom: 32px;}
+.tx-text-10{font-family: "Oswald";font-size: 10px;}
+.tx-text-12{font-family: "Oswald";font-size: 12px;}
+.tx-text-14{font-family: "Oswald";font-size: 14px;}
+.tx-text-16{font-family: "Oswald";font-size: 16px;}
+.tx-text-18{font-family: "Oswald";font-size: 18px;}
+.tx-text-20{font-family: "Oswald";font-size: 20px;}
+.tx-text-24{font-family: "Oswald";font-size: 24px;}
+.tx-text-32{font-family: "Oswald";font-size: 32px;}
