--- a/cmd/web/admin/site/tarantula.admin.css
+++ b/cmd/web/admin/site/tarantula.admin.css
@@ -2,6 +2,7 @@
 .tx-orange-icon-48{font-size: 48px; color: orange;}
 .tx-orange-icon-32{font-size: 32px; color: orange;}
 .tx-orange-icon-24{font-size: 24px; color: orange;}
+.tx-orange-icon-20{font-size: 20px; color: orange;}
 .tx-red-icon-24{font-size: 24px; color: red;}
 .tx-content-120{height: 120px; width: 100%;}
 .tx-content-48{height: 48px; width: 100%;}
