--- a/cmd/web/admin/site/tarantula.admin.css
+++ b/cmd/web/admin/site/tarantula.admin.css
@@ -22,3 +22,4 @@
 .tx-text-24{font-family: "Oswald";font-size: 24px;}
 .tx-text-32{font-family: "Oswald";font-size: 32px;}
 .tx-padding-button{padding:4px 8px 4px 8px;}
+textarea {width:100%; height: 240px; border:1px solid green}
