--- a/cmd/web/admin/site/tarantula.admin.css
+++ b/cmd/web/admin/site/tarantula.admin.css
@@ -6,6 +6,7 @@
 .tx-red-icon-24{font-size: 24px; color: red;}
 .tx-content-120{height: 120px; width: 100%;}
 .tx-content-48{height: 48px; width: 100%;}
+.tx-content-24{height: 24px; width: 100%;}
 .tx-content-64{height: 64px; width: 100%;}
 .tx-margin-left-4{margin-left: 4px;}.tx-margin-right-4{margin-right: 4px;}.tx-margin-top-4{margin-top: 4px;}.tx-margin-bottom-4{margin-bottom: 4px;}
 .tx-margin-left-8{margin-left: 8px;}.tx-margin-right-8{margin-right: 8px;}.tx-margin-top-8{margin-top: 8px;}.tx-margin-bottom-8{margin-bottom: 8px;}
