--- a/cmd/web/admin/site/tarantula.admin.css
+++ b/cmd/web/admin/site/tarantula.admin.css
@@ -4,6 +4,7 @@
 .tx-orange-icon-24{font-size: 24px; color: orange;}
 .tx-orange-icon-20{font-size: 20px; color: orange;}
 .tx-red-icon-24{font-size: 24px; color: red;}
+.tx-content-200{height: 200px; width: 100%;}
 .tx-content-120{height: 120px; width: 100%;}
 .tx-content-48{height: 48px; width: 100%;}
 .tx-content-24{height: 24px; width: 100%;}
